began fixing tables for smaller screens, experimenting with .valign-wrapper

--- a/src/scss/specific_questions.scss
+++ b/src/scss/specific_questions.scss
@@ -19,5 +19,9 @@
           margin-right: 1em;
         }
     }
+    
+    .valign-wrapper {
+      flex-wrap: wrap;
+    }
           
 }
