--- a/src/scss/test_movements.scss
+++ b/src/scss/test_movements.scss
@@ -25,10 +25,6 @@
 
 }
 
-caption {
-  padding: 3em;
-}
-
 .title {
   font-size: 2em;
 }
